--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
     <meta charset="UTF-8"/>
     <title>Visualizing Pokemon</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
-
-    <h1>Visualizing Pokemon</h1>
-
-    <svg id="pokemon"></svg>
+    <header>
+      <div class="header-text">
+        <h1>Pokemon interactive visualization - Do Pokemon get stronger over the generations?</h1>
+      </div>
+    </header>
+    <main>
+      <h2>Overview</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quasi ea quo odio rem veritatis. Aspernatur ratione quia inventore asperiores incidunt id sint eum ducimus, voluptates ipsa, accusantium porro sapiente?</p>
+      <h2>Development of stat values over the generations</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iste ipsam sint delectus facilis error obcaecati repellendus voluptate deleniti doloremque dignissimos aperiam non, explicabo vero magni sunt provident culpa autem!</p>
+      <em>
+        <strong>Sample question:</strong>
+        How did the base stat total develop? 
+      </em>  
+      
+     <div class="visualizations">
+      <svg id="scatterplot"></svg>
+      <svg id="boxplot"></svg>
+      <div class="filter"></div>
+     </div> 
+    </main>
 
     <script src="pokemon.js"></script>
   </body>
 </html>
+
