added barchart and heatmap plot

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
       </em>  
       
      <div class="visualizations">
+      <div id="my_dataviz"></div>
+
+      <svg id="barchart"></svg>
       <svg id="scatterplot"></svg>
-      <svg id="boxplot"></svg>
+      <svg id="heatmap"></svg>
       <div class="filter"></div>
      </div> 
     </main>
