add interaction for second heatmap

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 
       <svg id="barchart"></svg>
       <svg id="scatterplot"></svg>
-      <svg id="heatmap"></svg>
+      <div id="graph">
+        <svg id="heatmap"></svg>
+
+        <div class="tooltip"></div>
+
+      </div>
+      <div class="info"></div>
+      <svg id="selected_heatmap"></svg>
       <div class="filter"></div>
      </div> 
     </main>
