--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="info"></div>
       <svg id="selected_heatmap"></svg>
-      <div class="filter"></div>
+      <!-- <div class="filter"></div> -->
      </div> 
     </main>
 
