Align heatmap and barchart

--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
         </select>
         <svg class="flex" id="scatterplot"></svg>
       </div>
-      <div id="graph">
-        <svg id="heatmap"></svg>
-
-        <div class="tooltip"></div>
-
+      <div class = "flex">
+        <div id="graph">
+          <svg id="heatmap"></svg>
+          <div class="tooltip"></div>
+        </div>
+        <div class="info"></div>
+        <svg id="selected_heatmap"></svg>
       </div>
-      <div class="info"></div>
-      <svg id="selected_heatmap"></svg>
-      <!-- <div class="filter"></div> -->
      </div> 
     </main>
 
