--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
      <div class="visualizations">
       <div class="flex">
-        <div class = "flex">
+        <div class = "flex" id="scatter">
           <select name="stat" id="stat" class="rotated">
             <option value="base_stat_total">Base Stat Total</option>
             <option value="hp">HP</option>
@@ -30,7 +30,6 @@
         </div>
         <div id="graph">
           <svg id="heatmap"></svg>
-          <div class="tooltip"></div>
         </div>
         <svg id="selected_heatmap"></svg>
       </div>
